force-app/main/default/objects/CalendarSettingMapping__mdt/CalendarSettingMapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains calendar setting mapping on creation if custom fields are added.</description>
    <label>Calendar Setting Mapping</label>
    <pluralLabel>Calendar Setting Mappings</pluralLabel>
</CustomObject>