force-app/main/default/objects/CalendarSettingMapping__mdt/fields/CalendarFilter__c.field-meta.xml
<CustomField>
    <fullName>CalendarFilter__c</fullName>
    <description>Related calendar filter, contains a field reference to CalendarSetting</description>
    <label>Calendar filter</label>
    <referenceTo>CalendarFilter__mdt</referenceTo>
    <relationshipLabel>Calendar Setting Mappings</relationshipLabel>
    <relationshipName>CalendarSettingMappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>