force-app/main/default/objects/CalendarSettingMapping__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <metadataRelationshipControllingField>CalendarSettingMapping__mdt.Object__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Calendar_Setting_Mappings</relationshipLabel>
    <relationshipName>Calendar_Setting_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>