force-app/main/default/objects/CalendarSettingMapping__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Related object to map</description>
    <label>Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>CalendarSettingMappings</relationshipLabel>
    <relationshipName>CalendarSettingMappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>